syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/values/pb";

package values;

message Value {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    bytes bytes_value = 3;
    Map map_value = 4;
    List list_value = 5;
    DecimalValue decimal_value = 6;
    int64 int64_value = 7;
    Nil nil_value = 8;
  }
}

message Map {
  map<string, Value> fields = 1;
}

message List {
  repeated Value fields = 2;
}

message DecimalValue {
  int64 integral = 1; // Number of digits before the decimal point
  int32 scale = 2; // Number of digits after the decimal point
}

message Nil {
}
